--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
   <section id="about">
     <h2>About Me</h2>
-    <p>My name is Nikita, an 18-year-old designer passionate about turning thoughts into visuals. 
-        I’m learning web design, graphic design, and expanding into other areas of creativity.
-         Here you’ll find a showcase of my finest projects.</p>
+    <p>My name is Nikita, an 18-year-old designer passionate about turning thoughts into visuals. I’m learning web design, graphic design, and expanding into other areas of creativity. 
+      I also specialize in creating images with the help of artificial intelligence and have experience working with HTML, CSS, and JavaScript.
+      Here you’ll find a showcase of my finest projects.</p>
   </section>
 
   <section id="gallery">
@@ -43,6 +43,14 @@
     </div>
   </section>
 
+  <section id="websites" class="fade-in">
+    <h2>My Websites</h2>
+    <div class="links">
+      <a href="https://nikitayeltsov.github.io/FastHelper/index.html" target="_blank">Example Project 1</a>
+    </div>
+  </section>
+
+
   <section id="contact">
     <h2>Contact</h2>
     <p>Email: nikitaelcov899@gmail.com</p>
@@ -50,3 +58,4 @@
   </section>
 </body>
 </html>
+
