Add second project link to portfolio
Added a second example project link to the websites section.

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     <h2>My Websites</h2>
     <div class="links">
       <a href="https://nikitayeltsov.github.io/FastHelper/index.html" target="_blank">Example Project 1</a>
+      <a href="https://nikitayeltsov.github.io/PortfolioEX/" target="_blank">Exemple Project 2</a>
     </div>
   </section>
 
@@ -58,4 +59,5 @@
   </section>
 </body>
 </html>
+
 
